--- a/src/modules/layout/components/Header.less
+++ b/src/modules/layout/components/Header.less
@@ -2,6 +2,7 @@
 @import (reference) 'src/styles/mixins';
 
 .header {
+  @header-break-point: @sm-max;
   background-color: @c-gray-40;
   color: @c-gray-100;
   height: 100%;
@@ -23,7 +24,7 @@
     overflow: hidden;
     transition: flex-basis @animation-x3, opacity @animation-x3;
 
-    @media @md-max {
+    @media @header-break-point {
       flex-basis: 49px;
       opacity: 1;
     }
@@ -66,7 +67,7 @@
     text-align: right;
     transition: flex-basis @animation-x3, opacity @animation-x3;
 
-    @media @md-max {
+    @media @header-break-point {
       flex-basis: 0;
       opacity: 0;
     }
@@ -76,7 +77,7 @@
     flex-basis: 0;
     transition: flex-basis @animation-x3;
 
-    @media @md-max {
+    @media @header-break-point {
       flex-basis: 100%;
     }
   }
